update adds more text update fix for last landing slide on iphone in landscape mode, and text edits

--- a/css/style.css
+++ b/css/style.css
@@ -4791,18 +4791,19 @@ body {
 
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
   .special-share a {
-    display: block; } }
-@media screen and (-ms-high-contrast: active) and (max-width: 1210px), screen and (-ms-high-contrast: none) and (max-width: 1210px) {
-  .story-page .move-out.image-container {
-    width: calc(100% - 245px); } }
-@media screen and (-ms-high-contrast: active) and (max-width: 1024px), screen and (-ms-high-contrast: none) and (max-width: 1024px) {
-  .story-page .move-out.image-container {
-    width: calc(100% - 195px); } }
-@media screen and (-ms-high-contrast: active) and (max-width: 900px), screen and (-ms-high-contrast: none) and (max-width: 900px) {
-  .story-page .move-out.image-container {
-    width: calc(100% - 95px); } }
+    display: block; }
 
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .story-page .move-out.image-container {
+    /*  @media screen and (max-width: 1210px) {
+          width: calc(100% - 245px)
+      }
+      @media screen and (max-width: 1024px) {
+          width: calc(100% - 195px)
+      }
+      @media screen and (max-width: 900px) {
+          width: calc(100% - 95px)
+      } */ }
+
   .main.fp-viewing-home-1 .area .thumbnails {
     transition: none; }
   .main.fp-viewing-home-1 .area:not(.scrolled) .thumbnails[style="position: absolute;"] {
